[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "jnp"
description = "一个 Python 语言的辅助工具集"
authors = [
    {name = "Julian Freeman", email = "freemanjulian372@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}


dependencies = []
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {attr = "jnp.__version__"}
